[project]
name = "order-flow-imbalance-strategy"
version = "0.1.0"
description = "ML-enhanced Order Flow Imbalance research pipeline for crypto markets"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
